[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { git = "https://github.com/risc0/risc0", ref = "515b80438fe82ff831d461fd3ae55a7dbce5a8b6", features = ["prove"] }
hex = { version = "0.4.3", features = ["alloc"], default-features = false }

tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
bincode = "1.3"

tlsn-core = { git = "https://github.com/tlsnotary/tlsn.git", rev = "d8747d49e304fa7a39a682c4a78745fb325efd6c" }
