[package]
name = "cowboy_example_apps"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { git = "https://github.com/risc0/risc0", ref = "515b80438fe82ff831d461fd3ae55a7dbce5a8b6", default-features = false,  features = ["std", "unstable"] } 
primitives = { path = "../../primitives" }
json = "0.12"